--- a/cp-content/cp-content-api/src/main/resources/application.yml
+++ b/cp-content/cp-content-api/src/main/resources/application.yml
@@ -26,3 +26,21 @@ springdoc:
   default-flat-param-object: true
   packages-to-scan: com.cp.content.api
 
+pagehelper:
+  # 数据库方言 mysql
+  helper-dialect: mysql
+
+  # 分页参数合理化
+  # 默认是false。
+  # 启用合理化时，如果pageNum<1会查询第一页，如果pageNum>pages会查询最后一页；
+  # 禁用合理化时，如果pageNum<1或pageNum>pages会返回空数据
+  reasonable: true
+
+  # 支持通过 Mapper 接口参数来传递分页参数
+  # 默认值 false
+  support-methods-arguments: true
+
+  # 为了支持startPage(Object params)方法，增加了该参数来配置参数映射，
+  # 用于从对象中根据属性名取值
+  #  默认值为 countSql
+  params: countSql
